# CGX_QV

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  run.ps1
CGX_VEYN/: CHANGELOG.md  Cargo.toml  Dockerfile  TODO.md  consumer.py  docker-compose.yml  openapi.yaml
CGX_VEYN/sdk/python/: pyproject.toml
CGX_VEYN/sdk/python/veyn_sdk/: __init__.py  client.py  stream.py
CGX_VEYN/veyn-core/: Cargo.toml
CGX_VEYN/veyn-core/src/: auth.rs  config.rs  dispatcher.rs  main.rs
CGX_VEYN/veyn-core/src/api/: mod.rs  routes.rs  state.rs
Qallow/: Cargo.toml  README.md
Qallow/backend/cpu/: phase1_elasticity.c  phase2_harmonic.c  phase3_coherence.c  phase4_convergence.c  semantic_memory.c
Qallow/core/include/: asios.h  phase1.h  phase2_accelerator.h  phase3.h  phase4.h  qallow_phase1.h  qallow_phase2.h  qallow_phase3.h  qallow_phase4.h
Qallow/core/qallow-veyn-bridge/: Cargo.toml
Qallow/core/qallow-veyn-bridge/src/: lib.rs
Qallow/include/: temporal_memory.h
Qallow/include/qallow/: error_codes.h
Qallow/interface/: phase_runners.c  phase_runners.h
Qallow/native_app/: Cargo.toml
Qallow/native_app/src/: main.rs  models.rs
Qallow/native_app/src/backend/: api_client.rs
Qallow/python/: asios_bridge.py  server.py  swarm.py
Qallow/python/agents/: llm_adapter.py
Qallow/python/tests/: test_server.py  test_swarm.py
Qallow/src/mind/: asios.c  attention.c  cognitive_state.c  memory.c
Qallow/src/runtime/: temporal_memory.c
brain-portrait/: index.html
mcp/: pyproject.toml  server.py
