[workspace]
members = [
    "CGX_VEYN/veyn-schemas",
    "CGX_VEYN/veyn-adapters",
    "CGX_VEYN/veyn-core",
    "CGX_VEYN/veyn-plugins",
    "Qallow/core/qallow-veyn-bridge",
    "Qallow/native_app",
]
resolver = "2"

[workspace.dependencies]
anyhow             = "1.0"
async-trait        = "0.1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5.4", features = ["derive"] }
csv                = "1.3"
fltk               = "1.4"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
thiserror          = "1.0"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4"] }
rand               = "0.8"
toml               = "0.8"
